# Sistema-automatico-de-anonimizacion-de-datos-sensibles

./: DOCKER_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: anonymize.py  classes.py  detect.py  health.py  text.py  video.py
backend/app/core/: config.py  logging_config.py
backend/app/models/: __init__.py  face_detector.py  multi_detector.py  plate_detector.py  unified_detector.py
backend/app/schemas/: __init__.py  anonymization.py  detection.py  health.py
backend/app/services/: anonymizer.py  image_processor.py  text_analyzer.py  video_processor.py
backend/app/utils/: file_handler.py
backend/tests/: test_api.py  test_services.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ClassSelector.jsx  Controls.jsx  ImagePreview.jsx  ImageUpload.jsx  VideoPreview.jsx  VideoUpload.jsx
frontend/src/components/layout/: MainLayout.jsx
frontend/src/pages/: Home.jsx  ImageProcessing.jsx  Settings.jsx  TextAnalysis.jsx  VideoProcessing.jsx
frontend/src/services/: api.js
models/unified_training/: args.yaml
scripts/: benchmark_performance.py  create_test_video.py  create_unified_dataset.py  evaluate_model.py  evaluate_unified_model.py  ollama-entrypoint.sh  prepare_datasets.py  train_face_detector.py  train_plate_detector.py  train_unified_model.py  train_unified_model_auto.py
